--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -27,7 +27,8 @@ h2 {
 
 .box-email input,
 .box-password input,
-.box-confirm input {
+.box-confirm input,
+.box-project-id input {
   width: 100%;
   height: 40px;
   padding: 10px;
