--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,5 @@
 <div class="user-info">
+  <%= react_component("PageTitle", { title: "プロフィール" }) %>
   <div class="card">
     <div class="card-body">
       <h5 class="card-title">ユーザー情報</h5>
