--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -2,23 +2,20 @@
   <div class="box-inner">
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
       <%= render "users/shared/error_messages", resource: resource %>
-      <h2>アカウント情報の編集</h2>
-
+      <%= react_component("PageTitle", { title: "アカウント情報変更" }) %>
       <div class="box-email">
         <%= f.label :email, "メールアドレス" %>
         <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
       </div>
-
-      <div class="box-admin-id">
+      <div class="box-project-id">
         <%= f.label :project_id, "マネジメントID" %>
         <%= f.text_field :project_id, autocomplete: "project_id", id: "user_project_id" %>
       </div>
-
       <div class="box-password">
-        <%= f.label :current_password,"現在のパスワード"%> <i>(変更を完了するには登録しているパスワードを入力してください)</i>
+        <%= f.label :current_password,"現在のパスワード"%> 
         <%= f.password_field :current_password, autocomplete: "current-password" %>
+        <i>(変更を完了するには登録しているパスワードを入力してください)</i>
       </div>
-
       <div class="actions">
         <%= f.submit "変更を保存する" %>
       </div>
