--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,28 +15,25 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
+          <%= link_to "ホーム", root_path, class: "nav-link active" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
+        </li>
         <% if user_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link active" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Profile", user_path(current_user), class: "nav-link active" %>
+            <%= link_to "アカウント情報", user_path(current_user), class: "nav-link active" %>
           </li>
           <li class="nav-item">
             <%= link_to "研修一覧", contents_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Logout", destroy_user_session_path, method: :delete, class: "nav-link active" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link active" %>
           </li>
         <% elsif admin_signed_in? %>
           <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link active" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Profile", admin_path(current_admin), class: "nav-link active" %>
+            <%= link_to "アカウント情報", admin_path(current_admin), class: "nav-link active" %>
           </li>
           <li class="nav-item">
             <%= link_to "研修一覧", contents_path, class: "nav-link active" %>
@@ -45,23 +42,14 @@
             <%= link_to "研修作成", new_content_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Logout", destroy_admin_session_path, method: :delete, class: "nav-link active" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
+            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: "nav-link active" %>
           </li>
         <% else %>
-          <li class="nav-item">
-            <%= link_to "Home", root_path, class: "nav-link active" %>
-          </li>
           <li class="nav-item">
             <%= link_to "ログインはこちら", new_user_session_path, class: "nav-link active" %>
           </li>
           <li class="nav-item">
             <%= link_to "管理者はこちら", new_admin_session_path, class: "nav-link active" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
           </li>
         <% end %>
       </ul>
