--- a/app/views/contacts/confirm.html.erb
+++ b/app/views/contacts/confirm.html.erb
@@ -1,33 +1,38 @@
 <div class="contact-confirm">
-  <table>
-    <tbody>
-      <tr>
-        <td class="text-center" style="width: 30%;">お名前</td>
-        <td><%= @contact.name %></td>
-      </tr>
-      <tr>
-        <td class="text-center" style="width: 30%;">メールアドレス</td>
-        <td><%= @contact.email %></td>
-      </tr>
-      <tr>
-        <td class="text-center">メッセージ</td>
-        <td style="white-space: pre-wrap;"><%= @contact.content %></td>
-      </tr>
-    </tbody>
-  </table>
-
-  <%= form_with(model: @contact, local: true) do |f| %>
-    <%= f.hidden_field :name %>
-    <%= f.hidden_field :email %>
-    <%= f.hidden_field :content %>
-    <div><%= f.submit '送信' %></div>
-    <br>
-  <% end %>
-  <%= form_with(model:@contact, url: back_path) do |f| %>
-    <%= f.hidden_field :name %>
-    <%= f.hidden_field :email %>
-    <%= f.hidden_field :content %>
-  <div><%= f.submit '入力画面に戻る' %></div>
-<% end %>
+  <div>
+    <table>
+      <tbody>
+        <tr>
+          <td class="text-center" style="width: 30%;">お名前</td>
+          <td><%= @contact.name %></td>
+        </tr>
+        <tr>
+          <td class="text-center" style="width: 30%;">メールアドレス</td>
+          <td><%= @contact.email %></td>
+        </tr>
+        <tr>
+          <td class="text-center">メッセージ</td>
+          <td style="white-space: pre-wrap;"><%= @contact.content %></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div>
+    <%= form_with(model: @contact, local: true) do |f| %>
+      <%= f.hidden_field :name %>
+      <%= f.hidden_field :email %>
+      <%= f.hidden_field :content %>
+      <div><%= f.submit '送信' %></div>
+      <br>
+    <% end %>
+  </div>
+  <div>
+    <%= form_with(model:@contact, url: back_path) do |f| %>
+      <%= f.hidden_field :name %>
+      <%= f.hidden_field :email %>
+      <%= f.hidden_field :content %>
+    <div><%= f.submit '入力画面に戻る' %></div>
+    <% end %>
+  </div>
 </div>
 
