--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,7 @@
 <div class = "contacts-wrapper">
-  <%= react_component("PageTitle", { title: "お問い合わせフォーム" }) %>
+  <div class="page-title-contacts">
+    <%= react_component("PageTitle", { title: "お問い合わせフォーム" }) %>
+  </div>
   <div class = "contacts-form-wrapper">
     <%= form_with(model: @contact, url: confirm_path, local: true, html: {class: 'needs-validation', novalidate: true}) do |f| %>
       <div class="form-group">
@@ -7,20 +9,17 @@
         <%= f.text_field :name, class: 'form-control', required: true %>
         <%= render 'shared/error_messages', object: @contact, attribute: :name %>
       </div>
-
       <div class="form-group">
         <%= f.label :email, 'メール*' %>
         <%= f.email_field :email, class: 'form-control', required: true %>
         <%= render 'shared/error_messages', object: @contact, attribute: :email %>
       </div>
-
       <div class="form-group">
         <%= f.label :content, 'メッセージ*' %>
         <%= f.text_area :content, rows: 5, class: 'form-control', required: true %>
         <%= render 'shared/error_messages', object: @contact, attribute: :content %>
       </div>
-
-      <div>
+      <div class="form-group">
         <%= f.submit '入力内容確認', class: 'btn btn-primary' %>
       </div>
     <% end %>
