--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,16 +1,13 @@
 <div class="content-wrapper">
-  <div class="content-container">
-    <div class="content-image">
-    </div>
+  <div class="container">
     <div class="content-detail">
-      <%= react_component("PageTitle", { title: "コンテンツ詳細" }) %>
       <div class="content-update">
+      <%= react_component("PageTitle", { title: @content.title }) %>
       <% if admin_signed_in? %>
         <%= link_to "編集", edit_content_path(@content) %>
         <%= link_to "削除", @content, method: :delete, data: { confirm: "本当に削除しますか?" } %>
       <% end %>
       </div>
-      <h2 class="content-title"><%= @content.title %></h2>
       <p class="content-description"><%= @content.description %></p>
       <hr>
       <% if @content.video.present? %>
@@ -20,12 +17,14 @@
       <% end %>
       <% if @content.youtube_url.present? %>
       <div class="content-youtube">
-        <iframe src="https://www.youtube.com/embed/<%= @content.youtube_url.last(11) %>" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
+        <iframe src="https://www.youtube.com/embed/<%= @content.youtube_url.last(11) %>" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="" frameborder="0" height="300" width="400"></iframe>
       </div>
       <% end %>
       <div class="content-content">
         <%= @content.text %>
       </div>
+      <hr>
+      <%= link_to "戻る", contents_path%>
     </div>
   </div>
 </div>
