--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -106,6 +106,14 @@
   padding: 10px;
 }
 
+.content-create {
+  margin: 20px;
+}
+
+.content-field {
+  margin-bottom: 20px;
+}
+
 /* Aside styles */
 .sidebar {
   width: 40%;
