--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,21 +1,25 @@
-<div class="row">
-  <div class="col-xs-3"></div>
-
-  <div class="col-xs-6">
-    <%= form_with model: @category, local: true do |f| %>
-      <%= f.label :title, 'カテゴリー名' %>
-      <br>
-      <%= f.text_field :title, class:'form-control' %>
-      <%= render 'shared/error_messages', object: @category, attribute: :title %>
-      <br>
-      <%= f.label :description, 'カテゴリー説明' %>
-      <br>
-      <%= f.text_field :description, class:'form-control' %>
-      <%= render 'shared/error_messages', object: @category, attribute: :description %>
-      <br>
-      <%= f.submit '更新する', class: 'btn btn-primary btn-block' %>
-    <% end %>
+<div class="category-wrapper">
+  <div class="row">
+    <div class="react-page-title">
+      <%= react_component("PageTitle", { title: "カテゴリー一覧" }) %>
+    </div>
+    <hr>
+    <div class="col-xs-6">
+      <%= form_with model: @category, local: true do |f| %>
+        <%= f.label :title, 'カテゴリー名' %>
+        <br>
+        <%= f.text_field :title, class:'form-control' %>
+        <%= render 'shared/error_messages', object: @category, attribute: :title %>
+        <br>
+        <%= f.label :description, 'カテゴリー説明' %>
+        <br>
+        <%= f.text_field :description, class:'form-control' %>
+        <%= render 'shared/error_messages', object: @category, attribute: :description %>
+        <br>
+        <%= f.submit '更新する', class: 'btn btn-primary btn-block' %>
+      <% end %>
+    </div>
   </div>
-
-  <div class="col-xs-3"></div>
+  <hr>
+  <%= link_to "戻る", categories_path%>
 </div>
