--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -1,6 +1,6 @@
 <div class = "content-create">
   <div class="react-page-title">
-    <%= react_component("PageTitle", { title: "コンテンツの編集" }) %>
+    <%= react_component("PageTitle", { title: "新規コンテンツの作成" }) %>
   </div>
   <hr>
   <%= form_with(model: @content, local: true) do |form| %>
