--- a/app/views/contents/index.html.erb
+++ b/app/views/contents/index.html.erb
@@ -22,7 +22,7 @@
         <%= f.label :title_or_description_cont_any, 'キーワードを入力してください', class: "fw-bold" %>
         <%= f.search_field :title_or_description_cont_any, class: "form-control" %>
         <br>
-        <%= f.submit '検索', class: "btn btn-primary mt-2" %>
+        <%= f.submit '検索', class: "btn btn-warning mt-2" %>
       <% end %>
     </div>
   </div>
