--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -1,7 +1,7 @@
 <div class="about">
   <div class="about-wrapper">
     <div class="about-header">
-      <img src="/assets/e1139_2.png" class= "img-fluid">
+      <%= image_tag "e1139_2.png", class: "img-fluid" %>
     </div>
     <div class="about-introduction">
       <p>研修メーカーとは、</p>
@@ -11,7 +11,7 @@
   </div>
   <div class="how-to-page">
     <div class="how-to-header">
-      <img src="/assets/how_to.png" class= "img-fluid">
+      <%= image_tag "how_to.png", class: "img-fluid" %>
     </div>
     <div class="how-to-introduction">
       <p>「管理者」と「利用者」</p>
