--- a/app/views/home/_card.html.erb
+++ b/app/views/home/_card.html.erb
@@ -2,7 +2,7 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card h-100 rounded-card">
-        <img src="/assets/13620.jpg" class="card-img-top" alt="...">
+        <%= image_tag "13620.jpg", class: "card-img-top", alt: "..." %>
         <div class="card-body">
           <h5 class="card-title p-3"><span class="marker_yellow">資料作成の時間</span></h5>
           <p class="card-text">一回作れば何回でも使い回しができます</p>
@@ -11,7 +11,7 @@
     </div>
     <div class="col">
       <div class="card h-100 rounded-card">
-        <img src="/assets/49264.jpg" class="card-img-top" alt="...">
+        <%= image_tag "49264.jpg", class: "card-img-top", alt: "..." %>
         <div class="card-body">
           <h5 class="card-title p-3"><span class="marker_yellow">聞かれる時間</span></h5>
           <p class="card-text">部下の方が見たい時に資料を見ることができます</p>
@@ -20,7 +20,7 @@
     </div>
     <div class="col">
       <div class="card h-100 rounded-card">
-        <img src="/assets/46090.jpg" class="card-img-top" alt="...">
+        <%= image_tag "46090.jpg", class: "card-img-top", alt: "..." %>
         <div class="card-body">
           <h5 class="card-title p-3"><span class="marker_yellow">考える時間</span></h5>
           <p class="card-text">動画、写真、YouTubeに対応しているので無理に文章を起こす必要はありません</p>
