--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,7 +3,7 @@
     <%= link_to("研修メーカー", root_path, id: "navbar-footer") %>
   </div>
   <div class="contact">
-    <p>お問い合わせは <%= link_to "こちら", new_contact_path %></p>
+    <p>お問い合わせは <%= link_to "こちら", new_contact_path, id: "footer-link" %></p>
   </div>
   <div class="copy">
     <p>@2023 Genki Sato</p>
