--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,7 +19,7 @@
           <%= link_to "ホーム", root_path, class: "nav-link active" %>
         </li>
         <li class="nav-item">
-          <%= link_to "お問合せ", new_contact_path, class: "nav-link active" %>
+          <%= link_to "お問い合わせ", new_contact_path, class: "nav-link active" %>
         </li>
         <% if user_signed_in? %>
           <li class="nav-item">
