--- a/app/views/contents/new.html.erb
+++ b/app/views/contents/new.html.erb
@@ -22,7 +22,7 @@
     </div>
     <div class = "content-field">
       <%= form.label :video%>
-      <%= form.file_field :video %>
+      <%= form.file_field :video, accept: 'video/*'%>
     </div>
     <div class = "content-field">
       <%= form.label :youtube_url%>
