--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -101,9 +101,10 @@
 
 .content-detail {
   margin-left: 20px;
+  margin-right: 20px;
   background-color: #FAEBD7;
   border: 2px solid #ccc;
-  padding: 10px;
+  padding: 20px;
 }
 
 .content-create {
