--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -42,7 +42,7 @@
       </table>
     </div>
     <hr>
-    <%= link_to "戻る", :back %>
+    <%= link_to "戻る", new_content_path %>
   </div>
 </div>
 
