--- a/app/views/contents/show.html.erb
+++ b/app/views/contents/show.html.erb
@@ -1,5 +1,5 @@
 <div class="content-wrapper">
-  <div class="container">
+  <div class="container-fluid">
     <div class="content-detail">
       <div class="content-update">
       <%= react_component("PageTitle", { title: @content.title }) %>
