--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -81,6 +81,14 @@
   letter-spacing: 1.5px;
 }
 
+@media (max-width: 480px) {
+
+  .about-introduction p,
+  .how-to-introduction p {
+    font-size: 20px;
+  }
+}
+
 .how-to-page {
   margin-top: 80px;
 }
