--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,11 +1,13 @@
 .user-info {
   margin-bottom: 20px;
   margin-top: 20px;
+  padding: 20px;
 
   .card {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     max-width: 800px;
     margin: 0 auto;
+    background-color: #f9f9f9;
   }
 
   .card-title {
@@ -30,7 +32,6 @@
   }
 
   .user-info-col {
-    flex: 1;
     padding: 20px;
   }
 }
