--- a/app/assets/stylesheets/contents.scss
+++ b/app/assets/stylesheets/contents.scss
@@ -1,4 +1,3 @@
-/* コンテンツの大枠 */
 .react-page-title {
   padding-left: 30px;
 }
@@ -6,7 +5,6 @@
 .hr {
   height: 1px;
 }
-
 
 .category-title {
   font-weight: 700;
@@ -17,13 +15,11 @@
   text-align: left;
 }
 
-/* コンテンツのタイトルと説明 */
 .content-title,
 .content-description {
   text-align: left;
 }
 
-/* コンテンツの中身 */
 .content-index {
   max-width: 800px;
   width: 100%;
@@ -34,7 +30,6 @@
   background-color: #FAEBD7;
 }
 
-/* コンテンツのタイトル */
 .category-title {
   font-size: 20px;
   margin-bottom: 10px;
@@ -47,14 +42,12 @@
   margin-bottom: 20px;
 }
 
-/* コンテンツの説明 */
 .category-description {
   font-size: 14px;
   color: #666;
   margin-bottom: 40px;
 }
 
-/* コンテンツの内容 */
 .content-wrapper {
   display: flex;
   flex-direction: column;
@@ -65,7 +58,6 @@
   margin-top: 20px;
 }
 
-/* コンテンツのタイトルと説明 */
 .content-header {
   display: flex;
   flex-direction: column;
@@ -77,7 +69,6 @@
   font-weight: bold;
   margin-bottom: 10px;
   text-align: left;
-  /* タイトルを左揃えにする */
 }
 
 .content-description {
@@ -85,14 +76,12 @@
   color: #666;
   margin-bottom: 10px;
   text-align: left;
-  /* 説明を左揃えにする */
 }
 
 .content-mainWrapper {
   width: 100%;
   margin: 0 auto;
   box-sizing: border-box;
-  /* 枠線を含めた幅にするために必要 */
   border: 2px solid #ccc;
   border-radius: 5px;
   padding: 10px;
@@ -105,6 +94,24 @@
   background-color: #FAEBD7;
   border: 2px solid #ccc;
   padding: 20px;
+  position: relative;
+}
+
+.content-youtube,
+.content-video {
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  position: relative;
+}
+
+.content-youtube iframe,
+.content-video video {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .content-create {
@@ -115,7 +122,6 @@
   margin-bottom: 20px;
 }
 
-/* Aside styles */
 .sidebar {
   width: 40%;
   margin-right: 20px;
