--- a/app/views/contacts/confirm.html.erb
+++ b/app/views/contacts/confirm.html.erb
@@ -22,7 +22,7 @@
       <%= f.hidden_field :name %>
       <%= f.hidden_field :email %>
       <%= f.hidden_field :content %>
-      <div><%= f.submit '送信' %></div>
+      <div><%= f.submit '送信', id: 'submit-button' %></div>
       <br>
     <% end %>
   </div>
@@ -31,7 +31,7 @@
       <%= f.hidden_field :name %>
       <%= f.hidden_field :email %>
       <%= f.hidden_field :content %>
-    <div><%= f.submit '入力画面に戻る' %></div>
+    <div><%= f.submit '入力画面に戻る', id: 'back-button' %></div>
     <% end %>
   </div>
 </div>
